--- a/cotizador_acerta/templates/polizas/result_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/result_todas_pdf.html
@@ -101,6 +101,8 @@
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono_empresa }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% elif conductor.telefono2 %} 
    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono2 }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
+   {% else %}
+   <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% endif %}
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>CONDUCTO DE PAGO:</b> {{ conducto }}</td>
   </tr>
@@ -254,7 +256,7 @@
     <td style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: center;" colspan="4"><img src="{% static 'img/firma-acerta-ok.png' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.<br>{{fecha.month}}/{{fecha.year}}/{{solicitud.num}}/WEB</td>
   </tr>
  </table>
- <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
+ <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; page-break-after: always;" cellspacing="0" cellpadding="0">
     <tr>
     <td style="text-align: right; border: none;" colspan="7"><br>ACREEDOR </td>
     </tr>
@@ -336,6 +338,8 @@
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono_empresa }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% elif conductor.telefono2 %} 
    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono2 }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
+   {% else %}
+   <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% endif %}
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>CONDUCTO DE PAGO:</b> {{ conducto }}</td>
   </tr>
@@ -489,7 +493,7 @@
     <td style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: center;" colspan="4"><img src="{% static 'img/firma-acerta-ok.png' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.<br>{{fecha.month}}/{{fecha.year}}/{{solicitud.num}}/WEB</td>
   </tr>
  </table>
- <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
+ <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; page-break-after: always;" cellspacing="0" cellpadding="0">
     <tr>
     <td style="text-align: right; border: none;" colspan="7"><br>CONTRATANTE </td>
     </tr>
@@ -570,6 +574,8 @@
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono_empresa }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% elif conductor.telefono2 %} 
    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;{{ extra_cliente.telefono2 }}&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
+   {% else %}
+   <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>TELÉFONO:&nbsp;&nbsp;&nbsp;RESIDENCIA&nbsp;&nbsp;&nbsp;OFICINA&nbsp;&nbsp;&nbsp;CELULAR</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ extra_cliente.telefono_res }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ conductor.telefono1 }}</td>
    {% endif %}
     <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>CONDUCTO DE PAGO:</b> {{ conducto }}</td>
   </tr>
@@ -723,7 +729,7 @@
     <td style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; text-align: center;" colspan="4"><img src="{% static 'img/firma-acerta-ok.png' %}" width="150" height="53"><br>_____________________________ <br>Acerta Seguros S.A.<br>{{fecha.month}}/{{fecha.year}}/{{solicitud.num}}/WEB</td>
   </tr>
  </table>
- <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;" cellspacing="0" cellpadding="0">
+ <table  style="position: absolute; top: 0; bottom: 0; left: 0; right: 0; page-break-after: always;" cellspacing="0" cellpadding="0">
     <tr>
     <td style="text-align: right; border: none;" colspan="7"><br>INTERMEDIARIO </td>
     </tr>
@@ -803,7 +809,7 @@
        <b>Por la suma de B/.:</b>&nbsp;&nbsp;&nbsp;&nbsp;
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}}
+       {{solicitud.cotizacion.prima_mensual}} -- {{total}}
       </td>
     </tr>
     <tr>
@@ -827,7 +833,7 @@
          {{solicitud.num}}
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}}
+       {{solicitud.cotizacion.prima_mensual}} 
       </td>
       <td style="text-align: justify; border: none;">
        El {{solicitud.dia_cobro}} de cada mes.
