ARREGLADO: En el monto mensual del PDF de ACH, está redondeando diferente al PDF de la póliza.

--- a/cotizador_acerta/templates/polizas/prueba_pdf.html
+++ b/cotizador_acerta/templates/polizas/prueba_pdf.html
@@ -84,7 +84,7 @@
        <b>Por la suma de B/.:</b>&nbsp;&nbsp;&nbsp;&nbsp;
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}} 
+       {{total}}
       </td>
     </tr>
     <tr>
@@ -108,7 +108,7 @@
          {{solicitud.num}}
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}}
+       {{total}}
       </td>
       <td style="text-align: justify; border: none;">
        El {{solicitud.dia_cobro}} de cada mes.
