--- a/cotizador_acerta/templates/polizas/result_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/result_todas_pdf.html
@@ -809,7 +809,7 @@
        <b>Por la suma de B/.:</b>&nbsp;&nbsp;&nbsp;&nbsp;
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}} -- {{total}}
+       {{total}}
       </td>
     </tr>
     <tr>
@@ -833,7 +833,7 @@
          {{solicitud.num}}
       </td>
       <td style="text-align: justify; border: none;">
-       {{solicitud.cotizacion.prima_mensual}} 
+       {{total}}
       </td>
       <td style="text-align: justify; border: none;">
        El {{solicitud.dia_cobro}} de cada mes.
