--- a/cotizador_acerta/templates/reportes/polizas_list.html
+++ b/cotizador_acerta/templates/reportes/polizas_list.html
@@ -117,6 +117,19 @@
 				      <td>{{ solicitud.cotizacion.conductor.modelo.nombre }}</td>
 			          <td><span class="badge bg-orange">{{ solicitud.cotizacion.corredor.email }}</span></td>
 				      <td><a id="id_submit" href="{% url 'emitir' solicitud.pk %}"  onclick="">Ver</a></td>
+				      <td>
+				      	<div class="btn-group">
+		                  	  <button type="button" class="btn btn-default">Acción</button>
+		                  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+			                    <span class="caret"></span>
+			                    <span class="sr-only">Toggle Dropdown</span>
+			                  </button>
+		                  <ul class="dropdown-menu" role="menu">
+		                    <li><a id="id_submit" href=""  onclick="window.open('{% url 'emitir' solicitud.pk %}');"><i class="fa fa-eye">  Ver Póliza</i></a></li>
+		                    <li><a href="" onclick="window.open('{% url 'generacion-pdf-polizas' solicitud.pk %}');"><i class="fa fa-eye">  Ver Solicitud</i></a></li>
+		                  </ul>
+		                </div>
+				      </td>
 				    </tr>
 			    {% endfor %}
 			    </tbody>
