--- a/cotizador_acerta/templates/reportes/cotizacion_details.html
+++ b/cotizador_acerta/templates/reportes/cotizacion_details.html
@@ -150,7 +150,7 @@
                     <div class="col-md-7">
                       {% if cotizacion.cotizacion.tipo_pago == 'Contado' %}
                         <h5><strong>Tipo de pago: Contado.</strong></h5>
-                      {% elif cotizacion.cotizacion.tipo_pago == 'Visa' %}
+                      {% elif cotizacion.cotizacion.tipo_pago == 'Visa' or cotizacion.tipo_pago == 'ACH' %}
                         <h5><strong>Tipo de pago: ACH/Visa.</strong></h5>
                       {% else %}
                         <h5><strong>Tipo de pago: Otros.</strong></h5>
@@ -158,7 +158,7 @@
                     </div>
                     <div class="col-md-5"></div>
                     <div class="col-xs-1 hidden-md hidden-lg"></div>
-                    <div class="col-md-3 col-xs-6 text-right" style="text-align:left;">
+                    <div class="col-md-2 col-xs-6 text-right" style="text-align:left;">
                       <h5><strong>Endoso:</strong></h5>
                       <h5>Subtotal:</h5>
                       <h5>Impuestos:</h5>
@@ -167,35 +167,30 @@
                       {% else %}
                       <h5>Total:</h5>
                       {% endif %}
+                      {% if cotizacion.tipo_pago == 'Contado' %}
+                      <h5><strong>Total de Contado:</strong></h5>
+                      {% elif cotizacion.tipo_pago == 'Visa' or cotizacion.tipo_pago == 'ACH' %}
+                      <h5><strong>Total con ACH/Visa:</strong></h5>
+                      {% endif %}
                       {% if cotizacion.tipo_pago != 'Contado' %}
                       <h5><strong>Cuotas:</strong></h5>
                       <h5><strong>Prima Mensual:</strong></h5>
                       {% endif %}
-                      {% if cotizacion.tipo_pago == 'Contado' %}
-                      <h5><strong>Prima Pago de Contado:</strong></h5>
-                      {% elif cotizacion.tipo_pago == 'Visa' %}
-                      <h5>Prima Pago ACH/Visa:</h5>
-                      {% endif %}
+
                     </div>
-                    <div class="col-md-2 col-xs-4 text-right" style="text:align:left;">
+                    <div class="col-md-3 col-xs-4 text-right" style="text:align:left;">
                       <h5><strong>{{ cotizacion.endoso }}</strong></h5>
                       <h5>B/.{{ subtotal|floatformat:2|intcomma }}</h5>
                       <h5>B/.{{ impuestos|floatformat:2|intcomma }}</h5>
-                      {% if cotizacion.tipo_pago != 'Contado' %}
+                      <h5>B/.{{ cotizacion.total|floatformat:2|intcomma }}</h5>
+                      {% if cotizacion.tipo_pago == 'Contado' %}
                       <h5><strong>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
-                      {% elif cotizacion.tipo_pago == 'Visa' or cotizacion.tipo_pago == 'ACH'%}
-                      <h5><strong>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</strong></h5>
-                      {% else %}
-                      <h5><strong>B/.{{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
+                      {% elif cotizacion.tipo_pago == 'Visa' or cotizacion.tipo_pago == 'ACH' %}
+                      <h5><strong>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}<strong></h5>
                       {% endif %}
                       {% if cotizacion.tipo_pago != 'Contado' %}
                       <h5><strong> {{ cotizacion.cuota }}</strong></h5>
                       <h5><strong>B/. {{ cotizacion.prima_mensual|floatformat:2 }}</strong></h5>
-                      {% endif %}
-                      {% if cotizacion.tipo_pago == 'Contado' %}
-                      <h5><strong>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
-                      {% elif cotizacion.tipo_pago == 'Visa' %}
-                      <h5>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
                       {% endif %}
                     </div>
                     <br>
