Detalle en PDF de opciones.

--- a/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
+++ b/cotizador_acerta/templates/cotizar/opciones_cotizaciones_pdf.html
@@ -91,7 +91,7 @@
                           <td><strong>TCR</strong></td>
                         {% elif tipo_pago == 'ACH' %}
                           <td><strong>Tipo de pago: </strong></td>
-                          <td><strong>AHC</strong></td>
+                          <td><strong>ACH</strong></td>
                         {% else %}
                           <td><strong>Tipo de pago: </strong></td>
                           <td><strong>Otros</strong></td>
@@ -169,7 +169,7 @@
                           <td><strong>TCR</strong></td>
                         {% elif tipo_pago == 'ACH' %}
                           <td><strong>Tipo de pago: </strong></td>
-                          <td><strong>AHC</strong></td>
+                          <td><strong>ACH</strong></td>
                         {% else %}
                           <td><strong>Tipo de pago: </strong></td>
                           <td><strong>Otros</strong></td>
