fixing correciones oct sem4

--- a/cotizador_acerta/templates/polizas/pdf_personaNatural.html
+++ b/cotizador_acerta/templates/polizas/pdf_personaNatural.html
@@ -48,7 +48,7 @@
 						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						 Riesgo: </span><span></span></p>
-						<p>Código del cliente: {{conductor1.pk}} </p>
+						<p>Código del cliente:  </p>
 					</td>
 				</tr>
 				<tr>
