En el PDF de poliza, cada campo que viene de la direccion debe estar separado con una coma. Tanto para direccion de cobro como para direccion principal.

--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -99,11 +99,11 @@
     <td colspan="4" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde.day }}/{{ solicitud.vigencia_desde.month }}/{{ solicitud.vigencia_desde.year }} <b> &nbsp;&nbsp;HASTA(*)</b> {{ solicitud.vigencia_hasta.day }}/{{ solicitud.vigencia_hasta.month }}/{{ solicitud.vigencia_hasta.year }}</td>
   </tr> 
   <tr>
-    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="4" style="border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }}, {{ extra_cliente.distrito }}, {{ extra_cliente.corregimiento }}, {{ extra_cliente.urbanizacion }}, {{ extra_cliente.edificio }}, {{ extra_cliente.piso }}, {{ extra_cliente.apto }}, {{ extra_cliente.calle_ave }}, {{ extra_cliente.no_casa }}  </td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
   </tr>
   <tr>
-    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }}, {{ extra_cliente.distrito }}, {{ extra_cliente.corregimiento }}, {{ extra_cliente.urbanizacion }}, {{ extra_cliente.edificio }}, {{ extra_cliente.piso }}, {{ extra_cliente.apto }}, {{ extra_cliente.calle_ave }}, {{ extra_cliente.no_casa }} </td>
     <td colspan="4"><b>FRECUENCIA DE FACTURACIÓN:</b> ANUAL</td>
   </tr>
   <tr>
@@ -335,11 +335,11 @@
     <td colspan="4" rowspan="1"><font size="2"><div align="right">AL MEDIODÍA HORA OFICIAL (dd/mm/aaaa)</div></font> <b>VIGENCIA DESDE(*)</b>  {{ solicitud.vigencia_desde.day }}/{{ solicitud.vigencia_desde.month }}/{{ solicitud.vigencia_desde.year }} <b> &nbsp;&nbsp;HASTA(*)</b> {{ solicitud.vigencia_hasta.day }}/{{ solicitud.vigencia_hasta.month }}/{{ solicitud.vigencia_hasta.year }}</td>
   </tr> 
   <tr>
-    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
-    <td colspan="4" style="border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>DIRECCIÓN DE COBRO:</b> {{ extra_cliente.provincia }}, {{ extra_cliente.distrito }}, {{ extra_cliente.corregimiento }}, {{ extra_cliente.urbanizacion }}, {{ extra_cliente.edificio }}, {{ extra_cliente.piso }}, {{ extra_cliente.apto }}, {{ extra_cliente.calle_ave }}, {{ extra_cliente.no_casa }}  </td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>MONEDA: BALBOA</b></td>
   </tr>
   <tr>
-    <td colspan="4" style="border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }} {{ extra_cliente.distrito }} {{ extra_cliente.corregimiento }} {{ extra_cliente.urbanizacion }} {{ extra_cliente.edificio }} {{ extra_cliente.piso }} {{ extra_cliente.apto }} {{ extra_cliente.calle_ave }} {{ extra_cliente.no_casa }} </td>
+    <td colspan="4" style="border: 1px solid #dddddd; text-align: left; white-space: nowrap; padding: 1px; border-top: 1px white;"><b>DIRECCIÓN PRINCIPAL:</b> {{ extra_cliente.provincia }}, {{ extra_cliente.distrito }}, {{ extra_cliente.corregimiento }}, {{ extra_cliente.urbanizacion }}, {{ extra_cliente.edificio }}, {{ extra_cliente.piso }}, {{ extra_cliente.apto }}, {{ extra_cliente.calle_ave }}, {{ extra_cliente.no_casa }} </td>
     <td colspan="4"><b>FRECUENCIA DE FACTURACIÓN:</b> ANUAL</td>
   </tr>
   <tr>
